                    Apache Solr - solrj Version 1.3-dev
                            Release Notes

Introduction
------------
solrj is a java client for the solr search engine.


$Id$

================== Release 1.3-dev ==================

Status
------
This is the first release since Solrj was added to the main solr distribution.
The following changes list changes since the code was introduced, not since
the first official release.


Detailed Change List
--------------------

New Features

Changes in runtime behavior
 1. SOLR-278:  Modify LukeRequest/Response to support SOLR-266 schema display.
    (Will Johnson via ryan)

 2. SOLR-280: Changed the SolrDocument / SolrInputDocument implementation.  
    The API to build documents has changed -- you need to pass a boost 
    (or null) with every field.  (ryan)

Bug Fixes

Other Changes