@@ -36,6 +36,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|InputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|InputStreamReader
 import|;
 end_import
@@ -97,6 +107,44 @@ operator|.
 name|util
 operator|.
 name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|zip
+operator|.
+name|GZIPInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|zip
+operator|.
+name|InflaterInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
+name|Header
 import|;
 end_import
 
@@ -181,6 +229,20 @@ operator|.
 name|httpclient
 operator|.
 name|MultiThreadedHttpConnectionManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
+name|NoHttpResponseException
 import|;
 end_import
 
@@ -522,13 +584,32 @@ specifier|protected
 name|ResponseParser
 name|_processor
 decl_stmt|;
-DECL|field|_connectionManager
-name|MultiThreadedHttpConnectionManager
-name|_connectionManager
+DECL|field|_httpClient
+specifier|private
+specifier|final
+name|HttpClient
+name|_httpClient
+decl_stmt|;
+DECL|field|_followRedirects
+specifier|private
+name|boolean
+name|_followRedirects
 init|=
-operator|new
-name|MultiThreadedHttpConnectionManager
-argument_list|()
+literal|false
+decl_stmt|;
+DECL|field|_allowCompression
+specifier|private
+name|boolean
+name|_allowCompression
+init|=
+literal|false
+decl_stmt|;
+DECL|field|_maxRetries
+specifier|private
+name|int
+name|_maxRetries
+init|=
+literal|0
 decl_stmt|;
 comment|/**      * @param solrServerUrl The URL of the Solr server.  For     * example, "<code>http://localhost:8983/solr/</code>"    * if you are using the standard distribution Solr webapp     * on your local machine.    */
 DECL|method|CommonsHttpSolrServer
@@ -604,6 +685,13 @@ literal|1
 argument_list|)
 expr_stmt|;
 block|}
+name|this
+operator|.
+name|_httpClient
+operator|=
+name|createHttpClient
+argument_list|()
+expr_stmt|;
 comment|// increase the default connections
 name|this
 operator|.
@@ -660,6 +748,23 @@ argument_list|,
 literal|"2.2"
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * This can be overridden to add certificates etc    */
+DECL|method|createHttpClient
+specifier|protected
+name|HttpClient
+name|createHttpClient
+parameter_list|()
+block|{
+return|return
+operator|new
+name|HttpClient
+argument_list|(
+operator|new
+name|MultiThreadedHttpConnectionManager
+argument_list|()
+argument_list|)
+return|;
 block|}
 comment|//------------------------------------------------------------------------
 comment|//------------------------------------------------------------------------
@@ -814,6 +919,27 @@ name|params
 argument_list|)
 expr_stmt|;
 block|}
+name|int
+name|tries
+init|=
+name|_maxRetries
+operator|+
+literal|1
+decl_stmt|;
+try|try
+block|{
+while|while
+condition|(
+name|tries
+operator|--
+operator|>
+literal|0
+condition|)
+block|{
+comment|// Note: since we aren't do intermittent time keeping
+comment|// ourselves, the potential non-timeout latency could be as
+comment|// much as tries-times (plus scheduling effects) the given
+comment|// timeAllowed.
 try|try
 block|{
 if|if
@@ -1252,6 +1378,40 @@ block|}
 block|}
 catch|catch
 parameter_list|(
+name|NoHttpResponseException
+name|r
+parameter_list|)
+block|{
+comment|// This is generally safe to retry on
+name|method
+operator|.
+name|releaseConnection
+argument_list|()
+expr_stmt|;
+name|method
+operator|=
+literal|null
+expr_stmt|;
+comment|// If out of tries then just rethrow (as normal error).
+if|if
+condition|(
+operator|(
+name|tries
+operator|<
+literal|1
+operator|)
+condition|)
+block|{
+throw|throw
+name|r
+throw|;
+block|}
+comment|//log.warn( "Caught: " + r + ". Retrying..." );
+block|}
+block|}
+block|}
+catch|catch
+parameter_list|(
 name|IOException
 name|ex
 parameter_list|)
@@ -1268,6 +1428,13 @@ throw|;
 block|}
 name|method
 operator|.
+name|setFollowRedirects
+argument_list|(
+name|_followRedirects
+argument_list|)
+expr_stmt|;
+name|method
+operator|.
 name|addRequestHeader
 argument_list|(
 literal|"User-Agent"
@@ -1275,6 +1442,25 @@ argument_list|,
 name|AGENT
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|_allowCompression
+condition|)
+block|{
+name|method
+operator|.
+name|setRequestHeader
+argument_list|(
+operator|new
+name|Header
+argument_list|(
+literal|"Accept-Encoding"
+argument_list|,
+literal|"gzip,deflate"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 try|try
 block|{
 comment|// Execute the method.
@@ -1282,8 +1468,7 @@ comment|//System.out.println( "EXECUTE:"+method.getURI() );
 name|int
 name|statusCode
 init|=
-name|getHttpConnection
-argument_list|()
+name|_httpClient
 operator|.
 name|executeMethod
 argument_list|(
@@ -1405,16 +1590,175 @@ name|getResponseCharSet
 argument_list|()
 expr_stmt|;
 block|}
+name|InputStream
+name|respBody
+init|=
+name|method
+operator|.
+name|getResponseBodyAsStream
+argument_list|()
+decl_stmt|;
+comment|// Jakarta Commons HTTPClient doesn't handle any
+comment|// compression natively.  Handle gzip or deflate
+comment|// here if applicable.
+if|if
+condition|(
+name|_allowCompression
+condition|)
+block|{
+name|Header
+name|contentEncodingHeader
+init|=
+name|method
+operator|.
+name|getResponseHeader
+argument_list|(
+literal|"Content-Encoding"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|contentEncodingHeader
+operator|!=
+literal|null
+condition|)
+block|{
+name|String
+name|contentEncoding
+init|=
+name|contentEncodingHeader
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|contentEncoding
+operator|.
+name|contains
+argument_list|(
+literal|"gzip"
+argument_list|)
+condition|)
+block|{
+comment|//log.debug( "wrapping response in GZIPInputStream" );
+name|respBody
+operator|=
+operator|new
+name|GZIPInputStream
+argument_list|(
+name|respBody
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|contentEncoding
+operator|.
+name|contains
+argument_list|(
+literal|"deflate"
+argument_list|)
+condition|)
+block|{
+comment|//log.debug( "wrapping response in InflaterInputStream" );
+name|respBody
+operator|=
+operator|new
+name|InflaterInputStream
+argument_list|(
+name|respBody
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+name|Header
+name|contentTypeHeader
+init|=
+name|method
+operator|.
+name|getResponseHeader
+argument_list|(
+literal|"Content-Type"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|contentTypeHeader
+operator|!=
+literal|null
+condition|)
+block|{
+name|String
+name|contentType
+init|=
+name|contentTypeHeader
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|contentType
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|contentType
+operator|.
+name|startsWith
+argument_list|(
+literal|"application/x-gzip-compressed"
+argument_list|)
+condition|)
+block|{
+comment|//log.debug( "wrapping response in GZIPInputStream" );
+name|respBody
+operator|=
+operator|new
+name|GZIPInputStream
+argument_list|(
+name|respBody
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|contentType
+operator|.
+name|startsWith
+argument_list|(
+literal|"application/x-deflate"
+argument_list|)
+condition|)
+block|{
+comment|//log.debug( "wrapping response in InflaterInputStream" );
+name|respBody
+operator|=
+operator|new
+name|InflaterInputStream
+argument_list|(
+name|respBody
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+block|}
+block|}
 name|Reader
 name|reader
 init|=
 operator|new
 name|InputStreamReader
 argument_list|(
-name|method
-operator|.
-name|getResponseBodyAsStream
-argument_list|()
+name|respBody
 argument_list|,
 name|charset
 argument_list|)
@@ -1528,20 +1872,6 @@ operator|=
 name|processor
 expr_stmt|;
 block|}
-DECL|method|getHttpConnection
-specifier|protected
-name|HttpClient
-name|getHttpConnection
-parameter_list|()
-block|{
-return|return
-operator|new
-name|HttpClient
-argument_list|(
-name|_connectionManager
-argument_list|)
-return|;
-block|}
 DECL|method|getConnectionManager
 specifier|public
 name|MultiThreadedHttpConnectionManager
@@ -1549,7 +1879,13 @@ name|getConnectionManager
 parameter_list|()
 block|{
 return|return
-name|_connectionManager
+operator|(
+name|MultiThreadedHttpConnectionManager
+operator|)
+name|_httpClient
+operator|.
+name|getHttpConnectionManager
+argument_list|()
 return|;
 block|}
 comment|/** set connectionTimeout on the underlying MultiThreadedHttpConnectionManager */
@@ -1562,12 +1898,56 @@ name|int
 name|timeout
 parameter_list|)
 block|{
-name|_connectionManager
+name|getConnectionManager
+argument_list|()
 operator|.
 name|getParams
 argument_list|()
 operator|.
 name|setConnectionTimeout
+argument_list|(
+name|timeout
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** set connectionManagerTimeout on the HttpClient.**/
+DECL|method|setConnectionManagerTimeout
+specifier|public
+name|void
+name|setConnectionManagerTimeout
+parameter_list|(
+name|int
+name|timeout
+parameter_list|)
+block|{
+name|_httpClient
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|setConnectionManagerTimeout
+argument_list|(
+name|timeout
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** set soTimeout (read timeout) on the underlying MultiThreadedHttpConnectionManager.  This is desirable for queries, but probably not for indexing. */
+DECL|method|setSoTimeout
+specifier|public
+name|void
+name|setSoTimeout
+parameter_list|(
+name|int
+name|timeout
+parameter_list|)
+block|{
+name|getConnectionManager
+argument_list|()
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|setSoTimeout
 argument_list|(
 name|timeout
 argument_list|)
@@ -1583,7 +1963,8 @@ name|int
 name|connections
 parameter_list|)
 block|{
-name|_connectionManager
+name|getConnectionManager
+argument_list|()
 operator|.
 name|getParams
 argument_list|()
@@ -1604,7 +1985,8 @@ name|int
 name|connections
 parameter_list|)
 block|{
-name|_connectionManager
+name|getConnectionManager
+argument_list|()
 operator|.
 name|getParams
 argument_list|()
@@ -1613,6 +1995,51 @@ name|setMaxTotalConnections
 argument_list|(
 name|connections
 argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * set followRedirects.  This defaults to false under the    * assumption that if you are following a redirect to get to a Solr    * installation, something is misconfigured somewhere.    */
+DECL|method|setFollowRedirects
+specifier|public
+name|void
+name|setFollowRedirects
+parameter_list|(
+name|boolean
+name|followRedirects
+parameter_list|)
+block|{
+name|_followRedirects
+operator|=
+name|followRedirects
+expr_stmt|;
+block|}
+comment|/**    * set allowCompression.  If compression is enabled, both gzip and    * deflate compression will be accepted in the HTTP response.    */
+DECL|method|setAllowCompression
+specifier|public
+name|void
+name|setAllowCompression
+parameter_list|(
+name|boolean
+name|allowCompression
+parameter_list|)
+block|{
+name|_allowCompression
+operator|=
+name|allowCompression
+expr_stmt|;
+block|}
+comment|/**    *  set maximum number of retries to attempt in the event of    *  transient errors.  Default: 0 (no) retries. No more than 1    *  recommended.    */
+DECL|method|setMaxRetries
+specifier|public
+name|void
+name|setMaxRetries
+parameter_list|(
+name|int
+name|maxRetries
+parameter_list|)
+block|{
+name|_maxRetries
+operator|=
+name|maxRetries
 expr_stmt|;
 block|}
 block|}
